--- a/dl-bert.ipynb
+++ b/dl-bert.ipynb
@@ -173,6 +173,7 @@
    "outputs": [],
    "source": [
     "ds = np.load('ds.npy', allow_pickle = True)\n",
+    "np.random.shuffle(ds)\n",
     "dstrain = ds[:int(len(ds)*.88)]\n",
     "dstest = ds[int(len(ds)*.88):]"
    ]
