--- a/dlfBERT.ipynb
+++ b/dlfBERT.ipynb
@@ -306,9 +306,10 @@
  "metadata": {
   "accelerator": "GPU",
   "colab": {
-   "machine_shape": "hm",
-   "name": "dlfBERT.ipynb",
-   "provenance": []
+   "collapsed_sections": [],
+   "name": "meetup.ipynb",
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3",
@@ -326,7 +327,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
-  },
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 1
