--- a/dlfBERT.ipynb
+++ b/dlfBERT.ipynb
@@ -267,7 +267,7 @@
     "    print(\"=== Eval: loss ===\", eval_loss)\n",
     "    print(\"=== Eval: acc. ===\", acc)\n",
     "    print(\"=== Eval: f1 ===\", f1)\n",
-    "    if acc > best:\n",
+    "    if round(acc,2) > best:\n",
     "      best = round(acc,2)\n",
     "      os.mkdir('./best' + str(best))\n",
     "      print(\"=== Saving model ===\")\n",
