--- a/testdlfBERT.ipynb
+++ b/testdlfBERT.ipynb
@@ -2,50 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'LABEL_0', 'score': 0.9957366585731506}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from transformers import RobertaTokenizer, TFRobertaForSequenceClassification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer = RobertaTokenizer.from_pretrained(\"PubChimps/dlfBERT\")\n",
-    "model = TFRobertaForSequenceClassification.from_pretrained(\"PubChimps/dlfBERT\",from_pt=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code = \"\"\"\n",
+    "from transformers import TextClassificationPipeline, RobertaTokenizer, RobertaForSequenceClassification\n",
     "\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = tokenizer.encode(code, max_length=512, return_tensors='tf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.predict(data)"
+    "DLFBERT_LANGUAGE_ID = 'PubChimps/dlfBERT'\n",
+    "code = \"\"\"\n",
+    "model = tf.keras.models.Sequential([\n",
+    "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "  tf.keras.layers.Dense(128, activation='relu'),\n",
+    "  tf.keras.layers.Dropout(0.2),\n",
+    "  tf.keras.layers.Dense(10)\n",
+    "])\n",
+    "\"\"\"\n",
+    "pipeline = TextClassificationPipeline(\n",
+    "    model=RobertaForSequenceClassification.from_pretrained(DLFBERT_LANGUAGE_ID),\n",
+    "    tokenizer=RobertaTokenizer.from_pretrained(DLFBERT_LANGUAGE_ID)\n",
+    ")\n",
+    "\n",
+    "pipeline(code)"
    ]
   }
  ],
